--- a/yes.html
+++ b/yes.html
@@ -2,17 +2,39 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="./style/css/yes_styles.css">
+        <title> Yeeeeeyyyy </title>
         
     </head> 
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+        }
+
+        #container {
+            text-align: center;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+    </style>
     <body>
         <div class="container">
+	<div id="container">
+
             <div >
                 <h1 class = "header_text">Yippie!!! </h1>
             </div>
             <div class="gif_container">
                 <img src="./style/images/cute-cat.gif" alt="Cute animated illustration">
             </div>
-            <p class = "text"> See you soon this Sunday at 12 pm !</p>
+            <p class = "text"> See you soon this 12/15/23, Sunday at 12 pm !</p>
         </div>
        
     </body> 
