--- a/yes.html
+++ b/yes.html
@@ -34,7 +34,7 @@
             <div class="gif_container">
                 <img src="./style/images/cute-cat.gif" alt="Cute animated illustration">
             </div>
-            <p class = "text"> See you soon this 12/15/23, Sunday at 12 pm !</p>
+            <p class = "text"> See you soon this Sunday, 12/17/23 at 12 pm !</p>
         </div>
        
     </body> 
