--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="container">
 	<div id="container">
             <div >
-                <h1 class = "header_text">Hey there! Do you wanna go out with me Cindy Curtis hahhaah</h1>
+                <h1 class = "header_text">Hey there! Do you want to go out with me, Cindy Curtis? hahhaah</h1>
             </div>
             <div class="gif_container">
                 <img src="https://media.giphy.com/media/LnKonfpQ44fNvuGLkA/giphy.gif" alt="Cute animated illustration">
