--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #f4f4f4;
+            background-color: #FF69B4;
         }
 
         #container {
